[gd_scene load_steps=11 format=2]

[ext_resource path="res://scr/testing.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.184314, 0.180392, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.705882, 0.698039, 0.623529, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.552941, 0.662745, 0.686275, 1 )
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.552941, 0.662745, 0.686275, 1 )
border_color = Color( 0.619608, 0.611765, 0.576471, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.552941, 0.662745, 0.686275, 1 )
border_color = Color( 0.619608, 0.611765, 0.576471, 1 )
border_blend = true
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.403922, 0.32549, 0.32549, 1 )
border_color = Color( 0.619608, 0.611765, 0.576471, 1 )
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.552941, 0.662745, 0.686275, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.552941, 0.662745, 0.686275, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.552941, 0.662745, 0.686275, 1 )
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4

[node name="Panel" type="Panel"]
margin_top = -2.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="innerPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -283.0
margin_right = 496.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 731, 189 )
custom_styles/panel = SubResource( 11 )

[node name="moneyLabel" type="Label" parent="innerPanel"]
margin_left = 406.0
margin_top = 10.0
margin_right = 618.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[MONEY]"
align = 1
valign = 1
autowrap = true

[node name="clickBTN" type="Button" parent="innerPanel"]
margin_left = 880.0
margin_top = 48.0
margin_right = 984.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
text = "Work (Day)"

[node name="healthLabel" type="Label" parent="innerPanel"]
anchor_left = 0.00100806
anchor_top = 0.0211268
anchor_right = 0.00100806
anchor_bottom = 0.0211268
margin_left = 5.0
margin_top = 7.0
margin_right = 126.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[HEALTH]"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="restartBTN" type="Button" parent="innerPanel"]
margin_left = 867.0
margin_top = 545.0
margin_right = 924.0
margin_bottom = 565.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 4 )
text = "Restart"

[node name="quitBTN" type="Button" parent="innerPanel"]
margin_left = 927.0
margin_top = 545.0
margin_right = 988.0
margin_bottom = 565.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 6 )
text = "Quit"

[node name="jobLabel" type="Label" parent="innerPanel"]
margin_left = 8.0
margin_top = 78.0
margin_right = 135.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[JOB DESCRIPTION]"
valign = 1

[node name="eventLog" type="ItemList" parent="innerPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -102.0
margin_right = 415.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/bg = SubResource( 7 )
max_text_lines = 100

[node name="daysLabel" type="Label" parent="innerPanel"]
margin_left = 880.0
margin_top = 5.0
margin_right = 984.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[DAYS ELAPSED]"
align = 2
valign = 1

[node name="CheckButton" type="CheckButton" parent="innerPanel"]
margin_left = 853.0
margin_top = 118.0
margin_right = 1000.0
margin_bottom = 158.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "Overtime?"

[node name="lifeLabel" type="Label" parent="innerPanel"]
margin_left = 8.0
margin_top = 110.0
margin_right = 125.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[LIFE EXPECTANCY]"
align = 1
valign = 1

[node name="clickWeekBTN" type="Button" parent="innerPanel"]
show_behind_parent = true
margin_left = 880.0
margin_top = 72.0
margin_right = 984.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 5 )
text = "Work (Week)"

[node name="clickMonthBTN" type="Button" parent="innerPanel"]
show_behind_parent = true
margin_left = 880.0
margin_top = 96.0
margin_right = 984.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 9 )
text = "Work (Month)"

[node name="logButton" type="Button" parent="innerPanel"]
margin_left = 9.0
margin_top = 443.0
margin_right = 81.0
margin_bottom = 462.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 10 )
text = "Save Log"

[node name="climateLabel" type="Label" parent="innerPanel"]
anchor_left = 0.000503525
anchor_top = 0.000875657
anchor_right = 0.106244
anchor_bottom = 0.000875657
margin_left = 7.5005
margin_top = 39.5026
margin_right = 28.606
margin_bottom = 61.5026
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Light Rain 11C"
valign = 1

[node name="seasonLabel" type="Label" parent="innerPanel"]
margin_left = 8.0
margin_top = 64.0
margin_right = 136.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Winter"
valign = 1

[node name="dateLabel" type="Label" parent="innerPanel"]
margin_left = 880.0
margin_top = 28.0
margin_right = 984.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[DATE FORMAT]"
align = 2
valign = 1

[node name="testButton" type="Button" parent="innerPanel"]
margin_left = 832.0
margin_top = 50.0
margin_right = 872.0
margin_bottom = 70.0
text = "TEST"

[connection signal="pressed" from="innerPanel/clickBTN" to="." method="_on_clickBTN_pressed"]
[connection signal="pressed" from="innerPanel/restartBTN" to="." method="_on_restartBTN_pressed"]
[connection signal="pressed" from="innerPanel/quitBTN" to="." method="_on_quitBTN_pressed"]
[connection signal="toggled" from="innerPanel/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="button_up" from="innerPanel/clickWeekBTN" to="." method="_on_clickWeekBTN_button_up"]
[connection signal="button_up" from="innerPanel/clickMonthBTN" to="." method="_on_clickMonthBTN_button_up"]
[connection signal="button_up" from="innerPanel/logButton" to="." method="_on_logButton_button_up"]
[connection signal="button_up" from="innerPanel/testButton" to="." method="_on_testButton_button_up"]
